# pg2iceberg

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yml  go.mod  go.sum  pg2iceberg-rust-port-plan.md  zensical.toml
.claude-memory/: port_plan.md
.github/workflows/: ci.yml  docs.yml  e2e.yml  nightly.yml  publish.yml  test.yml
api/: server.go
benchmark/: Dockerfile.bench  docker-compose.yml  pg2iceberg.yaml  prometheus.yml  run.sh  schema.sql
benchmark/terraform/: ecs.tf  outputs.tf  rds.tf  run-aws.sh  variables.tf  vpc.tf
clickhouse/: init.sql  users.xml
cmd/pg2iceberg/: main.go
config/: config.go  config_test.go
crates/pg2iceberg/: Cargo.toml
crates/pg2iceberg-coord/: Cargo.toml
crates/pg2iceberg-coord/src/: lib.rs  schema.rs  sql.rs
crates/pg2iceberg-coord/src/prod/: connect.rs  coord.rs  mod.rs
crates/pg2iceberg-core/: Cargo.toml
crates/pg2iceberg-core/src/: checkpoint.rs  event.rs  io.rs  lib.rs  lsn.rs  metrics.rs  partition.rs  schema.rs  typemap.rs  value.rs
crates/pg2iceberg-core/tests/: typemap_props.rs
crates/pg2iceberg-iceberg/: Cargo.toml
crates/pg2iceberg-iceberg/src/: compact.rs  file_index.rs  fold.rs  lib.rs  materialize.rs  meta.rs  orphan.rs  reader.rs  verify.rs  writer.rs
crates/pg2iceberg-iceberg/src/prod/: catalog.rs  gap_audit.rs  mod.rs  smoke.rs  vended.rs
crates/pg2iceberg-logical/: Cargo.toml
crates/pg2iceberg-logical/src/: lib.rs  materializer.rs  pipeline.rs  runner.rs  sink.rs
crates/pg2iceberg-logical/tests/: end_to_end.rs  materializer_e2e.rs  object_store_e2e.rs  ops_e2e.rs  ticker_e2e.rs
crates/pg2iceberg-pg/: Cargo.toml
crates/pg2iceberg-pg/src/: lib.rs
crates/pg2iceberg-pg/src/prod/: client.rs  discover.rs  mod.rs  stream.rs  tls.rs  typemap.rs  value_decode.rs
crates/pg2iceberg-query/: Cargo.toml
crates/pg2iceberg-sim/: Cargo.toml
crates/pg2iceberg-snapshot/: Cargo.toml
crates/pg2iceberg-snapshot/src/: lib.rs
crates/pg2iceberg-snapshot/tests/: snapshot_e2e.rs
crates/pg2iceberg-stream/: Cargo.toml
crates/pg2iceberg-stream/src/: blob.rs  codec.rs  lib.rs  rolling.rs
crates/pg2iceberg-stream/src/prod/: mod.rs  object_store_blob.rs
crates/pg2iceberg-stream/tests/: codec_props.rs
crates/pg2iceberg-tests/: Cargo.toml
crates/pg2iceberg-tests/src/: lib.rs
crates/pg2iceberg-tests/tests/: cleanup_orphans_e2e.rs  compact_e2e.rs  dst.rs  dst_chaos_soak.proptest-regressions  dst_chaos_soak.rs  dst_cleanup.rs  dst_distributed.rs  dst_dml_correctness.rs  dst_fault.proptest-regressions  dst_fault.rs  dst_live_add_table.rs  dst_markers.rs  dst_meta_tables.rs  dst_schema_evolution.rs  dst_slot_health.rs  dst_table_lifecycle.rs  expire_e2e.rs  integration_coord.rs  integration_lifecycle.rs  integration_pg_replication.rs  integration_vended_lifecycle.rs
crates/pg2iceberg-validate/: Cargo.toml
crates/pg2iceberg/src/: config.rs  lib.rs  main.rs  realio.rs  run.rs  setup.rs  snapshot_src.rs
docs/: CNAME  index.md
docs/architecture/: compaction.md  distributed.md  flusher.md  maintenance.md  materializer.md  overview.md  schema-evolution.md  snapshot.md  toast.md
docs/catalogs/: glue.md  lakekeeper.md  overview.md  polaris.md  r2.md  rest.md  s3-tables.md
docs/getting-started/: installation.md  overview.md  quickstart.md
docs/usage/: configuration.md  managing-tables.md  metadata-tables.md  modes.md  observability.md  partitioning.md  query-mode.md  reference.md  type-mapping.md
example/blue-green/: README.md  docker-compose.yml  schema.sql  seed.sql
example/multitenant/: docker-compose.yml  prometheus.yml  setup.sh
example/single/: config.yaml  docker-compose.yml  prometheus.yml  schema.sql  seed.sql  simulate.py
iceberg/: cached_catalog.go  catalog.go  commit_builder.go  compact.go  compact_test.go  events_schema.go  factory.go  maintain.go  maintain_test.go  manifest.go  manifest_test.go  meta_recorder.go  meta_schema.go  meta_writer.go  oauth2.go  parquet_reader.go  s3.go  s3_vended.go  s3_vended_router.go  s3_vended_router_test.go  s3_vended_test.go  snapshot_summary.go  snapshot_writer.go  tablewriter.go  writer.go
iceberg-rest/: Dockerfile
logical/: cleanup.go  decode.go  decode_test.go  events.go  events_test.go  logical.go  materializer.go  pipeline.go  pipeline_integration_test.go  snapshot.go  snapshot_chunk.go  snapshot_integration_test.go  types.go
metrics/: metrics.go
pipeline/: checkpoint.go  checkpoint_cached.go  checkpoint_pg.go  checkpoint_pg_integration_test.go  checkpoint_test.go  clickhouse.go  filestore.go  manager.go  metrics.go  pgstore.go  pipeline.go  pipeline_integration_test.go  store.go  validate.go  validate_test.go
postgres/: event.go  schema.go  schema_integration_test.go  schema_test.go
query/: buffer.go  pipeline.go  pipeline_integration_test.go  poller.go
schema/: mapping.go
scripts/: ban-nondeterminism.sh  simulate.py
sink/: catalog.go  compactor.go  consistency.go  events_schema.go  manifest.go  materializer.go  partition.go  s3.go  sigv4.go  sink.go  toast.go  toast_cache.go  writer.go
snapshot/: pgvalue_test.go  snapshot.go  snapshot_integration_test.go  testhelpers_test.go
source/: decode.go  decode_test.go  logical.go  logical_integration_test.go  query.go  snapshot.go  source.go
state/: state.go
stream/: cached_stream.go  coordinator.go  coordinator_mem.go  coordinator_pg.go  coordinator_pg_integration_test.go  stream.go  stream_test.go
tests/: diag_wire_compare.sh  run.sh
tests/cases/: 00001_basic_insert__input.sql  00001_basic_insert__query.sql  00001_basic_insert__reference.tsv  00002_update__input.sql  00002_update__query.sql  00002_update__reference.tsv  00003_delete__input.sql  00003_delete__query.sql  00003_delete__reference.tsv  00004_mixed_ops__input.sql  00004_mixed_ops__query.sql  00004_mixed_ops__reference.tsv  00005_column_types__input.sql  00005_column_types__query.sql  00005_column_types__reference.tsv  00006_toast_unchanged__input.sql  00006_toast_unchanged__reference.tsv  (+93 more)
tracing/: tracing.go
worker/: pool.go
(+41 files in other folders)
