[workspace]
resolver = "2"
members = [
    "crates/pg2iceberg-core",
    "crates/pg2iceberg-pg",
    "crates/pg2iceberg-coord",
    "crates/pg2iceberg-stream",
    "crates/pg2iceberg-iceberg",
    "crates/pg2iceberg-logical",
    "crates/pg2iceberg-query",
    "crates/pg2iceberg-snapshot",
    "crates/pg2iceberg-validate",
    "crates/pg2iceberg-sim",
    "crates/pg2iceberg-tests",
    "crates/pg2iceberg",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
proptest = "1"

pg2iceberg-core = { path = "crates/pg2iceberg-core" }
pg2iceberg-pg = { path = "crates/pg2iceberg-pg" }
pg2iceberg-coord = { path = "crates/pg2iceberg-coord" }
pg2iceberg-stream = { path = "crates/pg2iceberg-stream" }
pg2iceberg-iceberg = { path = "crates/pg2iceberg-iceberg" }
pg2iceberg-logical = { path = "crates/pg2iceberg-logical" }
pg2iceberg-query = { path = "crates/pg2iceberg-query" }
pg2iceberg-snapshot = { path = "crates/pg2iceberg-snapshot" }
pg2iceberg-validate = { path = "crates/pg2iceberg-validate" }
pg2iceberg-sim = { path = "crates/pg2iceberg-sim" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# `[patch.crates-io]` and matching git overrides for the two ecosystem
# forks pg2iceberg-rust depends on:
#
# 1. `iceberg` → `polynya-dev/iceberg-rust@polynya-patches`. Based on
#    upstream v0.9.0 plus three non-invasive patches: `TransactionAction`
#    visibility, a new `UpdateSchemaAction`, and a mixed-content
#    `FastAppendAction` that accepts both data and equality-delete files.
#    See `crates/pg2iceberg-iceberg/src/prod/gap_audit.rs` for context.
#
# 2. `tokio-postgres` + `postgres-replication` → `iambriccardo/rust-postgres`
#    at the same rev Supabase's etl pins. Upstream `sfackler/rust-postgres`
#    doesn't ship a `postgres-replication` crate, so a fork is unavoidable
#    for native pgoutput decoding in Rust. We use Riccardo's fork
#    (Supabase's etl maintainer) rather than rolling our own to avoid the
#    maintenance burden of two forks.
[patch.crates-io]
iceberg = { git = "https://github.com/polynya-dev/iceberg-rust", branch = "polynya-patches" }
# `iceberg-catalog-rest` also has to come from the fork: the
# polynya-patches branch threads the REST `loadTable` response's
# `config` map through `Table::builder().properties(response_config)`,
# which the published v0.9.0 omits. Without it, vended-credentials
# servers (Polaris, Lakekeeper, ...) return per-table S3 STS tokens
# in `config`, but our `extract_creds` sees an empty map because the
# `Table::properties()` accessor surfaces nothing.
iceberg-catalog-rest = { git = "https://github.com/polynya-dev/iceberg-rust", branch = "polynya-patches" }
iceberg-storage-opendal = { git = "https://github.com/polynya-dev/iceberg-rust", branch = "polynya-patches" }
tokio-postgres = { git = "https://github.com/iambriccardo/rust-postgres", rev = "31acf55c7e5c2244e5bb3a36e7afa2a01bf52c38" }
postgres-replication = { git = "https://github.com/iambriccardo/rust-postgres", rev = "31acf55c7e5c2244e5bb3a36e7afa2a01bf52c38" }
