[package]
name = "pg2iceberg-coord"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
pg2iceberg-core.workspace = true
serde.workspace = true
thiserror.workspace = true
