[package]
name = "pg2iceberg-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
# murmur3_x86_32 — required by Iceberg's bucket[N] transform spec.
# Same crate iceberg-rust uses; tiny pure-compute, no IO.
murmur3 = "0.5"

[dev-dependencies]
proptest.workspace = true
