[package]
name = "pg2iceberg-iceberg"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
arrow-array = "54"
arrow-buffer = "54"
arrow-schema = "54"
bytes = "1"
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }
pg2iceberg-core.workspace = true
pg2iceberg-stream.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
pollster = "0.4"
