[package]
name = "pg2iceberg-iceberg"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
arrow-array = "54"
arrow-buffer = "54"
arrow-schema = "54"
bytes = "1"
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }
pg2iceberg-core.workspace = true
pg2iceberg-stream.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true

# iceberg-rust prod-impl wrap. Heavy transitive deps (reqwest, opendal,
# arrow) but most of those are already in our graph from parquet.
iceberg = { version = "0.9", optional = true }

[features]
default = []
# Enables the prod-impl module that wraps iceberg-rust. Off by default so
# sim-only consumers don't pull the heavier dep graph (reqwest, opendal).
prod = ["dep:iceberg"]

[dev-dependencies]
pollster = "0.4"
# Iceberg's Transaction::commit uses tokio::time::sleep in its retry backoff.
# Smoke tests under `--features prod` therefore need a tokio runtime; the
# non-prod tests still run on pollster.
tokio = { version = "1", features = ["rt", "macros", "time"] }
