[package]
name = "pg2iceberg-pg"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
pg2iceberg-core.workspace = true
serde.workspace = true
thiserror.workspace = true

# Real Postgres client + pgoutput decoder, gated behind `prod`. We pin
# Supabase's etl-maintained fork via `[patch.crates-io]` in the workspace
# Cargo.toml; see that file for context.
tokio-postgres = { version = "0.7", optional = true, default-features = false, features = [
    "runtime",
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
postgres-replication = { version = "0.6", optional = true, default-features = false }
postgres-protocol = { version = "0.6", optional = true }
postgres-types = { version = "0.2", optional = true, features = [
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
tokio = { version = "1", optional = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
futures-util = { version = "0.3", optional = true, default-features = false }
bytes = { version = "1", optional = true }
byteorder = { version = "1", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["std"] }
rust_decimal = { version = "1", optional = true, default-features = false, features = ["std"] }
uuid = { version = "1", optional = true, default-features = false, features = ["std"] }
# TLS lives inside `prod` so test builds stay light. tokio-postgres-rustls
# 0.13 uses `ring` as the rustls crypto provider; we mirror that on
# `rustls` to keep the dep graph aligned.
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = { version = "0.26", optional = true }

[features]
default = []
prod = [
    "dep:tokio-postgres",
    "dep:postgres-replication",
    "dep:postgres-protocol",
    "dep:postgres-types",
    "dep:tokio",
    "dep:futures-util",
    "dep:bytes",
    "dep:byteorder",
    "dep:chrono",
    "dep:rust_decimal",
    "dep:uuid",
    "dep:tokio-postgres-rustls",
    "dep:rustls",
    "dep:webpki-roots",
]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

# Diagnostic helper: dumps the raw CopyData stream from PG so we can
# diff `tokio-postgres` against `pg_recvlogical`. Built only with prod.
[[bin]]
name = "wire_trace"
required-features = ["prod"]
