[package]
name = "pg2iceberg"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "pg2iceberg"
path = "src/main.rs"

[dependencies]
pg2iceberg-core.workspace = true
pg2iceberg-logical.workspace = true
pg2iceberg-query.workspace = true
pg2iceberg-snapshot.workspace = true
pg2iceberg-validate.workspace = true
